@@ -1,3 +1,9 @@
+2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
+
+	Fixes #336286
+
+	* gnome-mouse-properties.c (main): switched from popt to GOptionContext.
+
 2006-10-16  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes #163690
